nginx/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: kws
  labels:
    app: nginx
spec:
  ports:
  - port: 88
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx
