nginx/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: nginx
  namespace: kws
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: minio.knd.com
      http:
        paths:
        - path: /
          backend:
            serviceName: nginx-service
            servicePort: 88
